refactor: adding react components to wordpress

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ wp-content/*
 wp-content/themes/*
 !wp-content/themes/blocks-theme/
 !wp-content/mu-plugins/
+!wp-content/plugins/
 
 # large/disallowed file types - a CDN should be used for these
 *.hqx
