--- a/wp-content/plugins/firstblock/package.json
+++ b/wp-content/plugins/firstblock/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wordpress/scripts": "^22.4.0"
+    "@wordpress/scripts": "^22.5.0"
+  },
+  "dependencies": {
+    "@wordpress/block-editor": "^8.6.0",
+    "@wordpress/blocks": "^11.6.0"
   }
 }
