--- a/wp-content/plugins/boilerplate/package.json
+++ b/wp-content/plugins/boilerplate/package.json
@@ -14,7 +14,11 @@
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start"
 	},
+	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
-		"@wordpress/scripts": "^22.5.0"
+		"@wordpress/eslint-plugin": "^12.1.0",
+		"@wordpress/prettier-config": "^1.2.0",
+		"@wordpress/scripts": "^22.5.0",
+		"eslint-config-prettier": "^8.5.0"
 	}
 }
