feat: (sec 2, chp 16) configuring stylelint for linting our scss files

--- a/wp-content/plugins/firstblock/package.json
+++ b/wp-content/plugins/firstblock/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "wp-scripts build",
-    "format": "wp-scripts format",
+    "format": "wp-scripts format && stylelint \"**/*.scss\" --fix",
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "packages-update": "wp-scripts packages-update",
@@ -19,9 +19,14 @@
     "@wordpress/eslint-plugin": "^12.1.0",
     "@wordpress/prettier-config": "^1.2.0",
     "@wordpress/scripts": "^22.5.0",
-    "eslint-config-prettier": "^8.5.0"
+    "@wordpress/stylelint-config": "^20.0.2",
+    "eslint-config-prettier": "^8.5.0",
+    "stylelint": "^14.7.1"
   },
   "prettier": "@wordpress/prettier-config",
+  "stylelint": {
+    "extends": "@wordpress/stylelint-config/scss"
+  },
   "dependencies": {
     "@wordpress/block-editor": "^8.6.0",
     "@wordpress/blocks": "^11.6.0"
