--- a/wp-content/plugins/boilerplate/package.json
+++ b/wp-content/plugins/boilerplate/package.json
@@ -7,7 +7,7 @@
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
-		"format": "wp-scripts format",
+		"format": "wp-scripts format && stylelint \"**/*.scss\" --fix",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
@@ -15,10 +15,15 @@
 		"start": "wp-scripts start"
 	},
 	"prettier": "@wordpress/prettier-config",
+	"stylelint": {
+		"extends": "@wordpress/stylelint-config/scss"
+	},
 	"devDependencies": {
 		"@wordpress/eslint-plugin": "^12.1.0",
 		"@wordpress/prettier-config": "^1.2.0",
 		"@wordpress/scripts": "^22.5.0",
-		"eslint-config-prettier": "^8.5.0"
+		"@wordpress/stylelint-config": "^20.0.2",
+		"eslint-config-prettier": "^8.5.0",
+		"stylelint": "^14.7.1"
 	}
 }
