feat: (sec 2, chp 17) adding a pre-commit git hook and husky

--- a/wp-content/plugins/boilerplate/package.json
+++ b/wp-content/plugins/boilerplate/package.json
@@ -12,7 +12,8 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start",
+		"prepare": "husky install .config/husky"
 	},
 	"prettier": "@wordpress/prettier-config",
 	"stylelint": {
@@ -24,6 +25,7 @@
 		"@wordpress/scripts": "^22.5.0",
 		"@wordpress/stylelint-config": "^20.0.2",
 		"eslint-config-prettier": "^8.5.0",
+		"husky": "^7.0.4",
 		"stylelint": "^14.7.1"
 	}
 }
