--- a/wp-content/plugins/text-box/package.json
+++ b/wp-content/plugins/text-box/package.json
@@ -39,6 +39,7 @@
 		"@wordpress/stylelint-config": "^19.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.4",
-		"lint-staged": "^12.1.3"
+		"lint-staged": "^12.1.3",
+		"lodash": "^4.17.21"
 	}
 }
