--- a/wp-content/plugins/team-members/package.json
+++ b/wp-content/plugins/team-members/package.json
@@ -31,6 +31,7 @@
 		"@wordpress/i18n": "^4.2.4"
 	},
 	"devDependencies": {
+		"@wordpress/babel-preset-default": "^6.10.0",
 		"@wordpress/eslint-plugin": "^9.3.0",
 		"@wordpress/prettier-config": "^1.1.1",
 		"@wordpress/scripts": "^19.2.2",
